--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Maria Krivolap</title>
 </head>
+    <body>
+        123
+    </body>
 </html>
