--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <link rel="stylesheet" href="style.css">
     <title>Maria Krivolap</title>
 </head>
-    <body>
-        123
-    </body>
+    <body></body>
 </html>
