--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <title>Maria Krivolap</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-    <body></body>
+    <body>Masha</body>
 </html>
