my first commit

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <title>Maria Krivolap</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <body>Masha</body>
+    <body>
+        Masha
+    </body>
 </html>
